--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
       - develop
-  schedule:
-    - cron: '0 17 * * *'
+#  schedule:
+ #   - cron: '0 17 * * *'
 
 
 env:
