--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,7 +110,9 @@ jobs:
         if: matrix.os == 'macos-latest'
       - name: Build Python package
         run: |
+          numpy --version
           poetry install
+          numpy --version
           poetry build -f wheel
       - name: Publish Python package
         run: poetry publish -u __token__ -p ${{ secrets.PYPI_TOKEN }}
