--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -138,7 +138,7 @@ jobs:
             source .env/bin/activate && \
             pip install --upgrade pip && \
             pip install poetry poetry-core==1.0.0 && \
-            poetry add pandas && \            
+            poetry add pandas==1.3.0 && \          
             poetry install && \
             poetry build -f wheel && \
             deactivate'
