--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,6 +108,9 @@ jobs:
           echo "CC=/usr/local/opt/llvm/bin/clang" >> $GITHUB_ENV
           echo "CXX=/usr/local/opt/llvm/bin/clang++" >> $GITHUB_ENV
         if: matrix.os == 'macos-latest'
+      - name: Install pandas
+        if: ${{ matrix.python-version == '3.6' }}
+        run: poetry add pandas==0.25.3
       - name: Build Python package
         run: |
           poetry install
@@ -138,7 +141,6 @@ jobs:
             source .env/bin/activate && \
             pip install --upgrade pip && \
             pip install poetry poetry-core==1.0.0 && \
-            poetry add pandas==1.3.0 && \          
             poetry install && \
             poetry build -f wheel && \
             deactivate'
