--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -110,7 +110,7 @@ jobs:
         if: matrix.os == 'macos-latest'
       - name: Install pandas
         if: ${{ matrix.python-version == '3.6' }}
-        run: poetry add pandas==0.25.3
+        run: poetry add pandas==0.25.3 h5py==3.1.0
       - name: Build Python package
         run: |
           poetry install
