--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -141,7 +141,8 @@ jobs:
             source .env/bin/activate && \
             pip install --upgrade pip && \
             pip install poetry poetry-core==1.0.0 && \
-            poetry add pandas==1.3.0 h5py==3.6.0 && \
+            python --version && \
+            python3 -m poetry add pandas==1.3.0 h5py==3.6.0 && \
             #poetry install && \
             poetry build -f wheel && \
             deactivate'
