--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,8 +140,8 @@ jobs:
             bash -exc '${{ env.py }} -m venv .env && \
             source .env/bin/activate && \
             pip install --upgrade pip && \
-            pip install poetry poetry-core==1.0.0 && \
-            python --version && \
+            pip install poetry poetry-core && \
+            poetry --version && \
             python3 -m poetry add pandas==1.3.0 h5py==3.6.0 && \
             #poetry install && \
             poetry build -f wheel && \
