--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,9 +108,9 @@ jobs:
           echo "CC=/usr/local/opt/llvm/bin/clang" >> $GITHUB_ENV
           echo "CXX=/usr/local/opt/llvm/bin/clang++" >> $GITHUB_ENV
         if: matrix.os == 'macos-latest'
-   #   - name: Install poetry for python version 3.6
-    #    if: ${{ matrix.python-version == '3.6' }}
-     #   run: poetry add pandas==0.25.3 h5py==3.1.0
+      - name: Install poetry for python version 3.6
+        if: ${{ matrix.python-version == '3.6' }}
+        run: poetry add pandas==0.25.3 h5py==3.1.0
       - name: Build Python package
         run: |
           poetry install
@@ -141,9 +141,8 @@ jobs:
             source .env/bin/activate && \
             pip install --upgrade pip && \
             pip install poetry poetry-core && \
-            poetry --version && \
-            python3 -m poetry add pandas==1.3.0 h5py==3.6.0 && \
-            #poetry install && \
+            #python3 -m poetry add pandas==1.3.0 h5py==3.6.0 && \
+            poetry install && \
             poetry build -f wheel && \
             deactivate'
       - name: Publish Python package
