--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,7 +109,7 @@ jobs:
           echo "CXX=/usr/local/opt/llvm/bin/clang++" >> $GITHUB_ENV
         if: matrix.os == 'macos-latest'
       - name: Install poetry for python version 3.6
-        if: ${{ matrix.python-version == '3.6' }}
+        if: ${{ matrix.python-version == '3.6' }} && ${{ matrix.os == 'ubuntu-latest' }}
         run: poetry add pandas==0.25.3 h5py==3.1.0
       - name: Build Python package
         run: |
