--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - master
       - develop
-#  schedule:
- #   - cron: '0 17 * * *'
+  schedule:
+    - cron: '0 17 * * *'
 
 
 env:
@@ -49,7 +49,6 @@ jobs:
         run: |
           docker tag deployment $DOCKER_REPO:latest
           docker push $DOCKER_REPO:latest
-
   push_sdist:
 
     if: github.event_name != 'schedule'
@@ -110,14 +109,14 @@ jobs:
         if: matrix.os == 'macos-latest'
       - name: Install poetry for python version 3.6
         if: ${{ matrix.python-version == '3.6' }} && ${{ matrix.os == 'ubuntu-latest' }}
-        run: poetry add pandas==0.25.3 h5py==3.1.0
+        run: poetry add pandas==0.25.3 h5py==3.1.0        
       - name: Build Python package
         run: |
           poetry install
           poetry build -f wheel
       - name: Publish Python package
         run: poetry publish -u __token__ -p ${{ secrets.PYPI_TOKEN }}
-
+        
   push_aarch64_wheels:
     strategy:
       matrix:
@@ -141,11 +140,10 @@ jobs:
             source .env/bin/activate && \
             pip install --upgrade pip && \
             pip install poetry poetry-core==1.0.0 && \
-            #python3 -m poetry add pandas==1.3.0 h5py==3.6.0 && \
             poetry install && \
             poetry build -f wheel && \
             deactivate'
       - name: Publish Python package
         run: |
             pip install poetry
-            poetry publish -u __token__ -p ${{ secrets.PYPI_TOKEN }}
+            poetry publish -u __token__ -p ${{ secrets.PYPI_TOKEN }}        
