--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,7 @@ jobs:
         python-version: [ '3.6', '3.7', '3.8' ]
         os: [ 'ubuntu-latest', 'windows-latest', 'macos-latest' ]
       fail-fast: false
-    name: Python ${{ matrix.python-version }} ${{ matrix.os }} wheel
+    name: Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
 
     steps:
